--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 
   <div id="racecar-flex-card-container">
-    <div id="racecar-card-container">
+    <!-- <div id="racecar-card-container"> -->
       <div class="card card-1"></div>
       <div class="card card-2"></div>
       <div class="card card-3"></div>
-    </div>
+    <!-- </div> -->
   </div>
 
 
