Prevent user from selecting cards from the back, added photos, cleaned up view on all devices

--- a/index.html
+++ b/index.html
@@ -11,11 +11,28 @@
 
 
   <div id="racecar-flex-card-container">
-    <div id="racecar-card-container">
-      <div class="card card-1"></div>
-      <div class="card card-2"></div>
-      <div class="card card-3"></div>
-    </div>
+    <!-- <div id="racecar-card-container"> -->
+      <div class="card card-1">
+        <div class="car-title">Snobalt</div>
+      </div>
+      <div class="card card-2">
+          <div class="car-title">
+            Camaro
+          </div>
+        </div>
+      <div class="card card-3">
+        <div class="car-title">
+          Wallpaper
+        </div>
+      </div>
+      <div class="invisible-wall"></div>
+    <!-- </div> -->
+  </div>
+
+  <div id="popup-container">
+    <div class="mod-parts"></div>
+
+
   </div>
 
 
