popup module added, reverse swipe in progress

--- a/index.html
+++ b/index.html
@@ -11,29 +11,75 @@
 
 
   <div id="racecar-flex-card-container">
-    <!-- <div id="racecar-card-container"> -->
       <div class="card card-1">
         <div class="car-title">Snobalt</div>
+        <div class="details-button"><img src="assets/icons/sharp-details-grey-24px.svg"/></div>
       </div>
       <div class="card card-2">
           <div class="car-title">
             Camaro
           </div>
+          <div class="details-button"><img src="assets/icons/sharp-details-grey-24px.svg"/></div>
+
         </div>
       <div class="card card-3">
         <div class="car-title">
           Wallpaper
         </div>
+        <div class="details-button"><img src="assets/icons/sharp-details-grey-24px.svg"/></div>
+
       </div>
       <div class="invisible-wall"></div>
-    <!-- </div> -->
   </div>
 
   <div id="popup-container">
-    <div class="mod-parts"></div>
+    <div id="exit-button">
+      <img src="assets/icons/baseline-close-24px.svg"/>
+    </div>
+    <div class="mod-parts-container">
+
+      <div class="mod-part-sub-container">
+        <div class="icon"><img src="assets/icons/coilover.png"/></div>
+        <div class="description fact-one">
+        </div>
+      </div>
+
+      <div class="mod-part-sub-container reverse-row">
+          <div class="icon"><img class="boost-icon" src="assets/icons/blower.png"/></div>
+          <div class="description fact-two">
+          </div>
+      </div>
+
+      <div class="mod-part-sub-container">
+          <div class="icon"><img src="assets/icons/guage.png"/></div>
+          <div class="description fact-three">
+          </div>
+      </div>
+
+      <div class="mod-part-sub-container reverse-row">
+          <div class="icon"><img src="assets/icons/piston.png"/></div>
+          <div class="description fact-four">
+          </div>
+      </div>
+
+      <div class="mod-part-sub-container">
+          <div class="icon"><img src="assets/icons/wheel.png"/></div>
+          <div class="description fact-five">
+          </div>
+      </div>
 
 
-  </div>
+
+
+
+
+
+
+      </div>
+
+    </div>
+
+
 
 
     <script
