updated to cycle through array of objects, bug exists on first scroll through*

--- a/index.html
+++ b/index.html
@@ -12,19 +12,17 @@
 
   <div id="racecar-flex-card-container">
       <div class="card card-1">
-        <div class="car-title">Snobalt</div>
+        <div class="car-title car-title-1"></div>
         <div class="details-button"><img src="assets/icons/sharp-details-grey-24px.svg"/></div>
       </div>
       <div class="card card-2">
-          <div class="car-title">
-            Camaro
+          <div class="car-title car-title-2">
           </div>
           <div class="details-button"><img src="assets/icons/sharp-details-grey-24px.svg"/></div>
 
         </div>
       <div class="card card-3">
-        <div class="car-title">
-          Wallpaper
+        <div class="car-title car-title-3">
         </div>
         <div class="details-button"><img src="assets/icons/sharp-details-grey-24px.svg"/></div>
 
