tabled and desktop version working-- issue with desktop previous/next buttons

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
     <div class="invisible-wall"></div>
   </div>
 
+  <div class="slider-buttons">
+      <button id="previous-button">Previous</button>
+      <button id="next-button">Next</button>
+  </div>
+
   <div id="popup-container">
     <div id="exit-button">
       <img src="assets/icons/baseline-close-24px.svg" />
