--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
 
     <div class="card card-1">
       <div class="car-title car-title-1"></div>
-      <div class="details-button"><img src="assets/icons/sharp-details-grey-24px.svg" /></div>
+      <div class="details-button"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/sharp-details-grey-24px.svg" /></div>
     </div>
     <div class="card card-2">
       <div class="car-title car-title-2">
       </div>
-      <div class="details-button"><img src="assets/icons/sharp-details-grey-24px.svg" /></div>
+      <div class="details-button"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/sharp-details-grey-24px.svg" /></div>
 
     </div>
     <div class="card card-3">
       <div class="car-title car-title-3">
       </div>
-      <div class="details-button"><img src="assets/icons/sharp-details-grey-24px.svg" /></div>
+      <div class="details-button"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/sharp-details-grey-24px.svg" /></div>
 
     </div>
 
 
     <div class="slider-buttons">
-      <button class="button" id="previous-button"><img src="assets/icons/arrow-left.svg"/></button>
-      <button class="button" id="next-button"><img src="assets/icons/arrow-right.svg"/></button>
+      <button class="button" id="previous-button"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-left.svg"/></button>
+      <button class="button" id="next-button"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-right.svg"/></button>
   </div>
 
   </div>
@@ -44,7 +44,7 @@
 
   <div id="popup-container">
     <div id="exit-button">
-      <img src="assets/icons/baseline-close-24px.svg" />
+      <img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/baseline-close-24px.svg" />
     </div>
 
     <div class="popup-section-title">Stats</div>
