updated width of container, fixed button toggle on mobile

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
 
+  <div class="vehicle-wrapper">
   <div id="racecar-flex-card-container">
       <div class="invisible-wall"></div>
 
@@ -62,7 +63,7 @@
 
   </div>
 
-
+</div>
 
 
   <script src="http://code.jquery.com/jquery-3.3.1.min.js"
