--- a/index.html
+++ b/index.html
@@ -12,63 +12,86 @@
 <body>
 
   <div class="vehicle-wrapper">
-  <div id="racecar-flex-card-container">
+    <div id="racecar-flex-card-container">
       <div class="invisible-wall"></div>
 
-    <div class="card card-1">
-      <div class="car-title car-title-1"></div>
-      <div class="details-button"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/sharp-details-grey-24px.svg" /></div>
-    </div>
-    <div class="card card-2">
-      <div class="car-title car-title-2">
+      <div class="card card-1">
+        <div class="car-title car-title-1"></div>
+        <div class="details-button">
+            <p style="color:white; text-align: center; opacity: .99;">Tap For More!</p>
+            <img
+            src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/sharp-details-grey-24px.svg" /></div>
       </div>
-      <div class="details-button"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/sharp-details-grey-24px.svg" /></div>
+      <div class="card card-2">
+        <div class="car-title car-title-2">
+        </div>
+        <div class="details-button"><img
+            src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/sharp-details-grey-24px.svg" /></div>
 
-    </div>
-    <div class="card card-3">
-      <div class="car-title car-title-3">
       </div>
-      <div class="details-button"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/sharp-details-grey-24px.svg" /></div>
+      <div class="card card-3">
+        <div class="car-title car-title-3">
+        </div>
+        <div class="details-button">
+          <img
+            src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/sharp-details-grey-24px.svg" /></div>
+
+      </div>
+
+
+      <div class="slider-buttons">
+        <button class="button" id="previous-button"><img
+            src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-left.svg" /></button>
+        <button class="button" id="next-button"><img
+            src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-right.svg" /></button>
+      </div>
+
+      <div class="slider-guide">
+          <div class="slider-arrow animate-1 slider-arrow-left-1"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-left-grey.svg" /></div>
+          <div class="slider-arrow animate-2 slider-arrow-left-2"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-left-grey.svg" /></div>
+          <div class="slider-arrow animate-3 slider-arrow-left-3"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-left-grey.svg" /></div>
+          <div class="slider-guide-text">
+            Swipe
+          </div>
+          <div class="slider-arrow animate-3 slider-arrow-right-3"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-right-grey.svg" /></div>
+          <div class="slider-arrow animate-2 slider-arrow-right-2"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-right-grey.svg" /></div>
+          <div class="slider-arrow animate-1 slider-arrow-right-1"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-right-grey.svg" /></div>
+      </div>
 
     </div>
 
 
-    <div class="slider-buttons">
-      <button class="button" id="previous-button"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-left.svg"/></button>
-      <button class="button" id="next-button"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-right.svg"/></button>
-  </div>
-
-  </div>
 
 
-  
 
-  <div id="popup-container">
-    <div id="exit-button">
-      <img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/baseline-close-24px.svg" />
+
+    <div id="popup-container">
+      <div id="exit-button">
+        <img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/baseline-close-24px.svg" />
+      </div>
+
+      <div class="popup-section-title">Stats</div>
+      <div class="car-stats"></div>
+
+      <div class="popup-section-title">Gallery</div>
+      <div class="photo-gallery"></div>
+
+      <div class="popup-section-title">Mod List</div>
+      <div class="mod-gallery"></div>
+
+      <div class="scrollbar" id="style-1">
+        <div class="force-overflow"></div>
+      </div>
     </div>
 
-    <div class="popup-section-title">Stats</div>
-    <div class="car-stats"></div>
-
-    <div class="popup-section-title">Gallery</div>
-    <div class="photo-gallery"></div>
-
-    <div class="popup-section-title">Mod List</div>
-    <div class="mod-gallery"></div>
-
-    <div class="scrollbar" id="style-1">
-      <div class="force-overflow"></div>
-  </div> 
-
   </div>
-
-</div>
 
 
   <script src="http://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 
   <script src="main.js"></script>
 </body>
