updated user prompt

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
       <div class="popup-section-title">Mod List</div>
       <div class="mod-gallery"></div>
 
-      <div class="scrollbar" id="style-1">
+      <!-- <div class="scrollbar" id="style-1">
         <div class="force-overflow"></div>
-      </div>
+      </div> -->
     </div>
 
   </div>
