ios scroll fixed on popup, code cleaned up

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <div class="card card-1">
         <div class="car-title car-title-1"></div>
         <div class="details-button">
-            <p style="color:white; text-align: center; opacity: .99;">Tap For More!</p>
-            <img
-            src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/sharp-details-grey-24px.svg" /></div>
+          <p style="color:white; text-align: center; opacity: .99;">Tap For More!</p>
+          <img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/sharp-details-grey-24px.svg" />
+        </div>
       </div>
       <div class="card card-2">
         <div class="car-title car-title-2">
@@ -33,11 +33,9 @@
         <div class="car-title car-title-3">
         </div>
         <div class="details-button">
-          <img
-            src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/sharp-details-grey-24px.svg" /></div>
+          <img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/sharp-details-grey-24px.svg" /></div>
 
       </div>
-
 
       <div class="slider-buttons">
         <button class="button" id="previous-button"><img
@@ -47,23 +45,24 @@
       </div>
 
       <div class="slider-guide">
-          <div class="slider-arrow animate-1 slider-arrow-left-1"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-left-grey.svg" /></div>
-          <div class="slider-arrow animate-2 slider-arrow-left-2"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-left-grey.svg" /></div>
-          <div class="slider-arrow animate-3 slider-arrow-left-3"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-left-grey.svg" /></div>
-          <div class="slider-guide-text">
-            Swipe
-          </div>
-          <div class="slider-arrow animate-3 slider-arrow-right-3"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-right-grey.svg" /></div>
-          <div class="slider-arrow animate-2 slider-arrow-right-2"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-right-grey.svg" /></div>
-          <div class="slider-arrow animate-1 slider-arrow-right-1"><img src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-right-grey.svg" /></div>
+        <div class="slider-arrow animate-1 slider-arrow-left-1"><img
+            src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-left-grey.svg" /></div>
+        <div class="slider-arrow animate-2 slider-arrow-left-2"><img
+            src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-left-grey.svg" /></div>
+        <div class="slider-arrow animate-3 slider-arrow-left-3"><img
+            src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-left-grey.svg" /></div>
+        <div class="slider-guide-text">
+          Swipe
+        </div>
+        <div class="slider-arrow animate-3 slider-arrow-right-3"><img
+            src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-right-grey.svg" /></div>
+        <div class="slider-arrow animate-2 slider-arrow-right-2"><img
+            src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-right-grey.svg" /></div>
+        <div class="slider-arrow animate-1 slider-arrow-right-1"><img
+            src="https://cdn.shopify.com/s/files/1/0022/0718/7055/files/arrow-right-grey.svg" /></div>
       </div>
 
     </div>
-
-
-
-
-
 
     <div id="popup-container">
       <div id="exit-button">
@@ -79,9 +78,6 @@
       <div class="popup-section-title">Mod List</div>
       <div class="mod-gallery"></div>
 
-      <!-- <div class="scrollbar" id="style-1">
-        <div class="force-overflow"></div>
-      </div> -->
     </div>
 
   </div>
